# grok-imagine-tauri

./: .gitignore  package-lock.json  package.json
src/: api.js  index.html  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
